Move to shared types
