# backend/api/DTOs/ReorderTodoDto.cs
@@ -1,7 +1,0 @@
-namespace api.DTOs;
-
-public class ReorderTodoDto
-{
-    public Guid Id { get; init; }
-    public int Position { get; init; }
-}
