# backend/api/DTOs/ReorderTodosRequest.cs
@@ -2,5 +2,5 @@ namespace api.DTOs;
 
 public class ReorderTodosRequest
 {
-    public IEnumerable<ReorderTodoDto> Todos { get; init; } = new List<ReorderTodoDto>();
+    public IEnumerable<TodoPosition> Todos { get; init; } = new List<TodoPosition>();
 }
